--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
 
+/* GENERAL */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* VARIABLES */
 :root {
     --font-primary: 'League Spartan', serif;
 }
