--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,12 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
+/* GENERAL */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* VARIABLES */
 :root {
     --primary-color: #caffe6;
     --font: Poppins;
@@ -14,99 +16,111 @@
 }
 
 body {
+    background-color: #f1f1f1;
+
     font-family: var(--font);
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    background-color: #f1f1f1;
 }
 
-/* CARRITO */
-
-#carrito-contenido {
+/* CARRITO - REALIZAR PEDIDO */
+.carrito {
     padding: 20px;
     text-align: center;
 }
 
-#carrito-contenido h2 {
+.carrito h2 {
     margin: 20px;
     text-align: left;
 }
 
-#lista-carrito {
+.carrito__lista {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-bottom: 20px;
 }
 
-#acciones-carrito {
-    margin-top: 20px;
+.carrito__pedir {
     background-color: #fff;
+
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 300px;
     padding: 20px;
     border-radius: 8px;
+
     box-shadow: var(--box-shadow);
     display: inline-block;
-    width: 300px;
-    margin: 0 auto;
 }
 
-#acciones-carrito label {
+.carrito__pedir label {
     font-weight: 500;
     margin-bottom: 10px;
     display: block;
 }
 
-#acciones-carrito input {
+.carrito__pedir input {
+    width: 100%;
+
     font-family: var(--font);
     font-size: 16px;
     padding: 10px;
-    width: 100%;
+
     border: 2px solid #caffe6;
     border-radius: 5px;
     margin-bottom: 20px;
+
     transition: border-color 0.3s ease;
 }
 
-#acciones-carrito input:focus {
+.carrito__pedir input:focus {
     border-color: #d91537;
 }
 
-#acciones-carrito #codigo {
+.carrito__pedir #codigo {
+    background-color: #caffe6;
+
     font-weight: 600;
     font-size: 18px;
-    background-color: #caffe6;
+
     padding: 5px 10px;
     border-radius: 5px;
     margin-bottom: 10px;
 }
 
-#acciones-carrito button {
-    background-color: #d91537;
+.carrito__pedir button {
+    cursor: pointer;
     color: white;
+    background-color: #d91537;
+
+    width: 100%;
     font-size: 18px;
     font-weight: 600;
     padding: 10px 20px;
+
     border: none;
     border-radius: 5px;
-    width: 100%;
-    cursor: pointer;
+
     transition: background-color 0.3s ease;
 }
 
-#acciones-carrito button:hover {
+.carrito__pedir button:hover {
     background-color: #ff4d4d;
 }
 
-/* Estilo para cada producto en el carrito */
+/* CARRITO - PRODUCTOS */
 .producto-carrito {
     background-color: #fff;
+
     padding: 15px;
     border-radius: 10px;
     box-shadow: var(--box-shadow);
+
     display: flex;
-    gap: 10px;
     align-items: center;
+    gap: 10px;
 }
 
 .producto-carrito img {
@@ -117,26 +131,28 @@ body {
 }
 
 .producto-carrito h3 {
+    color: #333;
     font-size: 18px;
     font-weight: 600;
-    color: #333;
 }
 
 .producto-carrito p {
-    font-size: 16px;
     color: #d91537;
+    font-size: 16px;
 }
 
-/* Estilos adicionales */
 #realizarPedido {
-    margin-top: 20px;
-    background-color: #ff4d4d;
-    border: none;
+    cursor: pointer;
     color: white;
+    background-color: #ff4d4d;
+
+    margin-top: 20px;
+    border: none;
+
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 18px;
-    cursor: pointer;
+
     width: 100%;
 }
 
@@ -151,12 +167,14 @@ body {
 }
 
 .btn-cantidad {
-    background-color: #d91537;
+    cursor: pointer;
     color: white;
+    background-color: #d91537;
+
     border: none;
     padding: 5px 10px;
     border-radius: 5px;
-    cursor: pointer;
+
     font-size: 18px;
 }
 
