--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ body {
     align-items: flex-start;
     gap: 20px;
     padding: 20px;
+    margin-bottom: 3%;
 }
 
 .producto {
@@ -267,4 +268,124 @@ body {
 
 .producto a:hover {
     background-color: #ff4d4d;
+}
+
+/* FOOTER */
+.footer {
+    color: #333;
+    background-color: #fff;
+
+    padding: 30px 70px;
+    font-family: var(--font);
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.footer__column {
+    margin-top: 1%;
+}
+
+.footer__column h3 {
+    color: #d91537;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.footer__column ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer__column ul li {
+    margin-bottom: 10px;
+}
+
+.footer__column ul li a {
+    color: #333;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.footer__column ul li a:hover {
+    color: #d91537;
+}
+
+.footer__social {
+    text-align: center;
+}
+
+.footer__social h3 {
+    margin-bottom: 10px;
+}
+
+.footer__icons {
+    margin-bottom: 20px;
+}
+
+.footer__icons a {
+    margin: 0 5px;
+    display: inline-block;
+}
+
+.footer__icons img {
+    width: 30px;
+    height: 30px;
+    transition: transform 0.3s ease;
+}
+
+.footer__icons img:hover {
+    transform: scale(1.2);
+}
+
+.footer__pagos {
+    display: grid;
+    grid-template-columns: 0.9fr 1.5fr 0.9fr;
+    grid-template-rows: 100px 90px;
+    gap: 10px;
+}
+
+.footer__pagos div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    padding: 10px;
+    height: 100%;
+
+    transition: transform 0.3s ease;
+}
+
+.footer__pagos div:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.footer__pagos img {
+    max-width: 50%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.footer__bottom {
+    text-align: center;
+    font-size: 14px;
+    border-top: 1px solid #ddd;
+    padding-top: 20px;
+    margin-top: 20px;
+}
+
+.footer__bottom .footer__links a {
+    color: #333;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer__bottom .footer__links a:hover {
+    color: #d91537;
 }
