--- a/css/style.css
+++ b/css/style.css
@@ -454,3 +454,60 @@ body {
 .footer__bottom .footer__links a:hover {
     color: #d91537;
 }
+
+/* RESPONSIVE */
+@media (max-width: 1024px) {
+    .navegador {
+        height: 10vh;
+    }
+
+    .navegador img {
+        width: 120px;
+    }
+
+    .navegador h1 {
+        font-size: 25px;
+        letter-spacing: 10px;
+    }
+
+    .navegador__links {
+        gap: 15px;
+        margin-right: 30px;
+    }
+
+    .navegador__links a {
+        font-size: 15px;
+    }
+
+    .filtros {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 576px) {
+    .navegador {
+        height: 10vh;
+    }
+
+    .navegador img {
+        width: 100px;
+    }
+
+    .navegador h1 {
+        font-size: 22px;
+        letter-spacing: 10px;
+    }
+
+    .navegador__links {
+        gap: 15px;
+        margin-right: 30px;
+    }
+
+    .navegador__links a {
+        font-size: 12px;
+    }
+
+    .filtros {
+        flex-direction: column;
+    }
+}
