--- a/css/login.css
+++ b/css/login.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 /* VARIABLES */
@@ -25,15 +26,29 @@ main {
     border-radius: 10px;
     font-size: 20px;
 
-    width: 40vw;
-    height: 40vh;
-    padding: 50px;
+    width: 35vw;
+    height: 42vh;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
+    border: 2px solid #cef6e4;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+
     font-family: var(--font-primary);
+}
+
+main img {
+    width: 30%;
+    margin-bottom: -20px;
+}
+
+#loggo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 form {
@@ -76,6 +91,7 @@ p {
     font-size: 14px;
     margin-top: 20px;
     opacity: 0.8;
+    margin-bottom: 50px;
 }
 
 a:hover {
