--- a/css/login.css
+++ b/css/login.css
@@ -43,6 +43,20 @@ main {
 main img {
     width: 30%;
     margin-bottom: -20px;
+
+    animation: logo 3s ease-in-out infinite;
+}
+
+@keyframes logo {
+    0% {
+        transform: scale(1) rotate(0deg);
+    }
+    50% {
+        transform: scale(1.1) rotate(0deg);
+    }
+    100% {
+        transform: scale(1) rotate(0deg);
+    }
 }
 
 #loggo {
@@ -63,6 +77,7 @@ form input {
     width: 100%;
     height: 3vh;
     margin-top: 0.5vh;
+    border: 2px solid #1c573c;
     border-radius: 5px;
 }
 
@@ -96,4 +111,43 @@ p {
 
 a:hover {
     color: #1c573c;
+}
+
+/* RESPONSIVE */
+@media (max-width: 1024px) {
+    main {
+        height: 50vh;
+        width: 45vw;
+    }
+
+    main img {
+        width: 45%;
+    }
+
+    h1 {
+        font-size: 35px;
+    }
+
+    form {
+        width: 80%;
+    }
+}
+
+@media (max-width: 576px) {
+    main {
+        height: 45vh;
+        width: 60vw;
+    }
+
+    main img {
+        width: 40%;
+    }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    form {
+        width: 70%;
+    }
 }
